force-app/main/default/objects/Port_Information__c/Port_Information__c.object-meta.xml
<CustomObject>
    <label>Port Info</label>
    <nameField>
        <label>English Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Port Info</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>