force-app/main/default/objects/Port_Information__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select country data.</errorMessage>
        <filterItems>
            <field>Country_Province_Master_Data__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country_Province_Master_Data__c</referenceTo>
    <relationshipLabel>Port Info</relationshipLabel>
    <relationshipName>Port_Info</relationshipName>
    <type>Lookup</type>
</CustomField>