force-app/main/default/objects/Port_Information__c/fields/Port_Information_Code__c.field-meta.xml
<CustomField>
    <fullName>Port_Information_Code__c</fullName>
    <externalId>true</externalId>
    <label>Port Information Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>